2005-02-05  C. Brian Jones  <cbj@gnu.org>

	* gnu/java/rmi/rmic/: added to cp-tools and removed from classpath
	* gnu/java/rmi/rmic/Compile_gcj.java: ditto
	* gnu/java/rmi/rmic/Compile_jikes.java: ditto
	* gnu/java/rmi/rmic/Compile_kjc.java: ditto
	* gnu/java/rmi/rmic/Compiler.java: ditto
	* gnu/java/rmi/rmic/CompilerProcess.java: ditto
	* gnu/java/rmi/rmic/RMICException.java: ditto
	* gnu/java/rmi/rmic/RMIC.java: ditto
	* gnu/java/rmi/rmic/TabbedWriter.java: ditto
	* gnu/java/rmi/registry/: added to cp-tools and removed from classpath
	* gnu/java/rmi/registry/RegistryImpl.java: ditto
	* gnu/java/rmi/registry/RegistryImpl_Skel.java: ditto
	* gnu/java/rmi/registry/RegistryImpl_Stub.java: ditto

2005-02-05  Mark Wielaard  <mark@klomp.org>

	* doc/api/Makefile.am (classpathbox): Use class logo and target _top.

2005-02-04  Chris Burdess  <dog@gnu.org>

	* gnu/xml/aelfred2/SAXDriver.java: Corrected implementation of
	isDeclared methods. Improved performance of isSpecified methods.

2005-02-04  Michael Koch  <konqueror@gmx.de>

	* javax/swing/SortingFocusTraversalPolicy.java
	(getSortedCycle): Fixed initialization of set.

2005-02-03  Robert Schuster  <thebohemian@gmx.net>

	* gnu/java/nio/charset/ISO_8859_1.java,
	gnu/java/nio/charset/US_ASCII.java, 
	gnu/java/nio/charset/UTF_16.java,
	gnu/java/nio/charset/UTF_16_LE.java,
	gnu/java/nio/charset/UTF_16_BE.java,
	gnu/java/nio/charset/UTF_8.java: Fixed canonical names
	 and aliases according to
	 "http://www.iana.org/assignments/character-sets",
	 "http://java.sun.com/j2se/1.5.0/docs/guide/intl/encoding.doc.html"
	 and "http://oss.software.ibm.com/cgi-bin/icu/convexp?s=ALL".
	* gnu/java/nio/charset/Provider.java: Made charset lookup
	 case-insensitive which fixes bug #11740. 

2005-02-03  Dalibor Topic  <robilad@kaffe.org>

        * libraries/javalib/gnu/regexp/RE.java,
        libraries/javalib/java/io/ObjectInputStream.java,
        libraries/javalib/java/io/ObjectStreamClass.java,